5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1679_1880.log
== TEST (2019-04-26 11:33:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12)
	if(m==1):
		print("janeiro")
		
		
		
		
		
		
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 4
    if (m<=12)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:34:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12):
	if(m==1):
		print("janeiro")
		
		
		
		
		
		
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 4
    if (m<=12)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:34:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12):
	if(m==1):
		print("janeiro")
		
		
		
		
		
		
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 4
    if (m<=12)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:42:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12 and m>0):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")

else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:42:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12 and m>0):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")

else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.137655
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:42:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12 and m>0):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")

else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:42:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12 and m>0):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")

else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:42:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12 and m>0):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")

else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:42:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12 and m>0):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")

else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.12585
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:42:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if (m<=12 and m>0):
	if(m==1):
		print("janeiro")
	elif(m==2):
		print("fevereiro")
	elif(m==3):
		print("marco")
	elif(m==4):
		print("abril")
	elif(m==5):
		print("maio")
	elif(m==6):
		print("junho")
	elif(m==7):
		print("julho")
	elif(m==8):
		print("agosto")
	elif(m==9):
		print("setembro")
	elif(m==10):
		print("outubro")
	elif(m==11):
		print("novembro")
	elif(m==12):
		print("dezembro")

else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.117295
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:45:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
	elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.150865
-- ERROR:
  File "/home/codebench/codes/1679/1880/main.py", line 16
    elif(m==7):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:45:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
	elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 16
    elif(m==7):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:45:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.189859
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:45:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:45:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:45:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes ai opora:"))

if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.225639
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:46:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:46:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:46:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:46:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("feverero")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.307869
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:51:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
elif(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 3
    elif(m==1):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:51:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:51:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.217727
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
abril
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:51:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.216495
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:51:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.130732
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
abril
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
maio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:51:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.11769
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:51:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro")
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:54:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro").lower()
elif(m==2):
	print("fevereiro").lower()
elif(m==3):
	print("marco").lower()
elif(m==4):
	print("abril").lower()
elif(m==5):
	print("maio").lower()
elif(m==6):
	print("junho").lower()
elif(m==7):
	print("julho").lower()
elif(m==8):
	print("agosto").lower()
elif(m==9):
	print("setembro").lower()
elif(m==10):
	print("outubro").lower()
elif(m==11):
	print("novembro").lower()
elif(m==12):
	print("dezembro").lower()
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.142689
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1880/main.py", line 10, in <module>
    print("abril").lower()
AttributeError: 'NoneType' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:54:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
if(m==1):
	print("janeiro").lower()
elif(m==2):
	print("fevereiro").lower()
elif(m==3):
	print("marco").lower()
elif(m==4):
	print("abril").lower()
elif(m==5):
	print("maio").lower()
elif(m==6):
	print("junho").lower()
elif(m==7):
	print("julho").lower()
elif(m==8):
	print("agosto").lower()
elif(m==9):
	print("setembro").lower()
elif(m==10):
	print("outubro").lower()
elif(m==11):
	print("novembro").lower()
elif(m==12):
	print("dezembro").lower()
else:
	print("numero do mes invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print("abril").lower()
AttributeError: 'NoneType' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:56:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1=janeiro
x2=fevereiro
x3=marco
x4=abril
x5=maio
x6=junho
x7=julho
x8=agosto
x9=setembro
x10=outubro
x11=novembro
x12=dezembro

if(m==1):
	print(x1.lower())
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x1=janeiro
NameError: name 'janeiro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:56:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"

if(m==1):
	print(x1.lower())
elif(m==2):
	print("fevereiro")
elif(m==3):
	print("marco")
elif(m==4):
	print("abril")
elif(m==5):
	print("maio")
elif(m==6):
	print("junho")
elif(m==7):
	print("julho")
elif(m==8):
	print("agosto")
elif(m==9):
	print("setembro")
elif(m==10):
	print("outubro")
elif(m==11):
	print("novembro")
elif(m==12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 11:58:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"

if(m==1):
	print(x1.lower())
elif(m==2):
	print(x2.lower())
elif(m==3):
	print(x3.lower())
elif(m==4):
	print(x4.lower())
elif(m==5):
	print(x5.lower())
elif(m==6):
	print(x6.lower())
elif(m==7):
	print(x7.lower())
elif(m==8):
	print(x8.lower())
elif(m==9):
	print(x9.lower())
elif(m==10):
	print(x10.lower())
elif(m==11):
	print(x11.lower())
elif(m==12):
	print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 11:58:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"

if(m==1):
	print(x1.lower())
elif(m==2):
	print(x2.lower())
elif(m==3):
	print(x3.lower())
elif(m==4):
	print(x4.lower())
elif(m==5):
	print(x5.lower())
elif(m==6):
	print(x6.lower())
elif(m==7):
	print(x7.lower())
elif(m==8):
	print(x8.lower())
elif(m==9):
	print(x9.lower())
elif(m==10):
	print(x10.lower())
elif(m==11):
	print(x11.lower())
elif(m==12):
	print(x12.lower())
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.137924
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 12:01:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12)
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.115313
-- ERROR:
  File "/home/codebench/codes/1679/1880/main.py", line 15
    if(1<=m and m<=12)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:01:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12)
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 15
    if(1<=m and m<=12)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 12:01:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.211722
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:01:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:01:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:01:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:01:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:02:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="março"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 12:03:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m or m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 12:03:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m or m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.118608
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 09:39:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m= int(input("Insira o mes:"))
x1="janeiro"
x2="fevereiro"
x3="marco"
x4="abril"
x5="maio"
x6="junho"
x7="julho"
x8="agosto"
x9="setembro"
x10="outubro"
x11="novembro"
x12="dezembro"
if(1<=m and m<=12):
	if(m==1):
		print(x1.lower())
	elif(m==2):
		print(x2.lower())
	elif(m==3):
		print(x3.lower())
	elif(m==4):
		print(x4.lower())
	elif(m==5):
		print(x5.lower())
	elif(m==6):
		print(x6.lower())
	elif(m==7):
		print(x7.lower())
	elif(m==8):
		print(x8.lower())
	elif(m==9):
		print(x9.lower())
	elif(m==10):
		print(x10.lower())
	elif(m==11):
		print(x11.lower())
	elif(m==12):
		print(x12.lower())
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.189176
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
